@@ -33,5 +33,7 @@ fi
 
 if [ "$TAJO_WORKER_STANDBY_MODE" = "true" ]; then
   "$bin/tajo-daemons.sh" cd "$TAJO_HOME" \; "$bin/tajo-daemon.sh" start worker
-  "$bin/tajo-daemons.sh" --hosts querymasters cd "$TAJO_HOME" \; "$bin/tajo-daemon.sh" start querymaster
+  if [ -f "${TAJO_CONF_DIR}/querymasters" ]; then
+    "$bin/tajo-daemons.sh" --hosts querymasters cd "$TAJO_HOME" \; "$bin/tajo-daemon.sh" start querymaster
+  fi
 fi
